Feature/config updates (#12)
This pull request includes updates across multiple files to enhance
compatibility, improve configurations, and clean up the codebase. The
most important changes include updating the Node.js engine requirements,
modifying the OpenAPI specification, and adding new environment
variables for the application.

### Compatibility and Configuration Updates:

* `apps/api/package.json`, `apps/explorer/package.json`, `package.json`:
Added Node.js engine requirements to specify compatible Node.js
versions.
[[1]](diffhunk://#diff-2c40985d6d91eed8ae85ec1c8e754a85984ee32e156a600d2b7a467423d7e338R6-R8)
[[2]](diffhunk://#diff-40e044cfb089f6fcd2bc5860c6c50f114901c2277406b02bef3e20a517e645f3R5-R7)
[[3]](diffhunk://#diff-7ae45ad102eab3b6d7e7896acd08c427a9b25b346470d7bc6507b6481575d519R8-R10)

### OpenAPI Specification Changes:

*
[`apps/api/src/openapi.yaml`](diffhunk://#diff-e3aaba04951d42844b2fe920ae5fba9636fdd91a53ff23c0148bca5d41bb1848L37-L52):
Removed `DocumentFields` schema and replaced `content` with
`pageContent` in several places to standardize the document content
field.
[[1]](diffhunk://#diff-e3aaba04951d42844b2fe920ae5fba9636fdd91a53ff23c0148bca5d41bb1848L37-L52)
[[2]](diffhunk://#diff-e3aaba04951d42844b2fe920ae5fba9636fdd91a53ff23c0148bca5d41bb1848L61-R45)
[[3]](diffhunk://#diff-e3aaba04951d42844b2fe920ae5fba9636fdd91a53ff23c0148bca5d41bb1848L89-R78)

### Environment Variable Additions:

*
[`render.yaml`](diffhunk://#diff-a64cf250b418ab8feee6c682a3d8cbd3b72cf24d4a241adeaf35c98b84045f93R10-R17):
Added new environment variables for `PORT`, `OPENAI_EMBEDDING_MODEL`,
and `OPENAI_CHAT_MODEL` to improve application configuration.

### Miscellaneous Changes:

*
[`VERSION`](diffhunk://#diff-7b60b8e351cbb80c47459ffe2c79f1a26404871f49294780fe47ad0e58c09350R1):
Updated the version to `1.0.0`.
*
[`supabase/.gitignore`](diffhunk://#diff-ee3234f16c29a0510dd8acb32f29d995111657115a3829a79268b04a48668cdcL6-R9):
Adjusted `.gitignore` rules for environment files
